<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dummyTitle">The Crimes Of Grindelwald</string>
    <string name="dummyDate">23 august 2020</string>
    <string name="dummyUserScore">75%</string>
    <string name="popularity_d">Popularity : %s</string>
    <string name="baseUrlImage">http://image.tmdb.org/t/p/w500%s</string>
    <string name="foregroundpostertopbar">foregroundPosterTopBar</string>
    <string name="poster">poster</string>
    <string name="dummyLanguage">en</string>
</resources>